# free-flight-plots

./: .gitignore  README.md  pyproject.toml
examples/: create_video.py  init_20121009_S0003.pkl
examples/data/: 20121009_S0003.txt  20121011_S0004.txt  20121120_S0001.txt  20121127_S0004.txt  20121128_S0002.txt  20121128_S0003.txt
src/free_flight_plots/: __init__.py  body_class.py  free_flight_plots.py  mpl_functions.py  wing_twist_class.py
